--- a/src/styles/core/_config.scss
+++ b/src/styles/core/_config.scss
@@ -2,7 +2,7 @@
    Namespace
 \* ------------------------------------ */
 
-$ns: 'mnml'; // Namespace for the CSS classes.
+$ns: 'mnml' !default; // Namespace for the CSS classes.
 
 
 /* ------------------------------------ *\
